--- a/styles.css
+++ b/styles.css
@@ -524,6 +524,19 @@ form{
     z-index: 3;
 }
 
+#experience {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Ajuste la hauteur à ta convenance */
+    position: relative;
+}
+
+#experience .content {
+    text-align: center;
+}
+
 #experience ul {
     z-index: 1;
     position: relative;
